--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "name": "newspage",
   "private": true,
+  "version": "1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stripe": "stripe-cli/stripe listen  --forward-to localhost:3000/api/webhooks"
   },
   "dependencies": {
+    "@prismicio/client": "5.1.1",
+    "@stripe/stripe-js": "^1.22.0",
+    "axios": "^0.24.0",
+    "fauna": "^0.4.1",
+    "faunadb": "^4.4.1",
     "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next-auth": "^4.1.0",
+    "prismic-dom": "2.2.7",
+    "react": "^17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "stripe": "^8.191.0",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.1.21",
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
     "eslint": "7",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "sass": "^1.44.0"
   }
 }
