:sparkles: added unitary tests

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "stripe": "stripe-cli/stripe listen  --forward-to localhost:3000/api/webhooks"
+    "stripe": "stripe-cli/stripe listen  --forward-to localhost:3000/api/webhooks",
+    "test": "jest"
   },
   "dependencies": {
     "@prismicio/client": "5.1.1",
@@ -26,11 +27,19 @@
   },
   "devDependencies": {
     "@prismicio/types": "^0.1.21",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
+    "babel-jest": "^27.5.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
+    "jest-mock": "^27.5.1",
     "sass": "^1.44.0"
   }
 }
