--- a/.env
+++ b/.env
@@ -24,4 +24,4 @@ PRISMIC_ACCESS_TOKEN=MC5ZZXg1OVJFQUFDSUF1ZDVM.Z--_vVcuZU1PBTVJ77-977-977-9KXcnCe
 PRISMIC_ENDPOINT=https://newspage.prismic.io/api/v2
 
 #Next-Auth
-NEXT_AUTH_URL=https://newspage.vercel.app/
+NEXTAUTH_URL=https://newspage.vercel.app/
